[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = { version = "0.8.1" }
axum = { version = "0.6.20", features = ["tracing", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio-rustls",
    "any",
    "macros",
    "chrono",
] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-signed"] }
axum-macros = "0.3.8"
cookie = "0.17.0"
tower-http = { version = "0.4.4", features = ["cors"] }
